SERVER-23944 Expect CallbackCanceled as shutdown error during chunk commit